--- a/app/index.html
+++ b/app/index.html
@@ -14,85 +14,19 @@
     <link href="styles/style.css" rel="stylesheet"/>
 
 </head>
-<body>
+<body ng-app="app">
 
 <div class="container">
-    <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
-        <main class="login mdl-layout__content">
-            <div class="mdl-grid">
-                <div class="mdl-card mdl-shadow--4dp mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--12-col-phone">
-                    <form action="#" id="loginform" name="as">
-                        <div class="mdl-card__title">
-                            <h2 class="mdl-card__title-text">GoingPlaces</h2>
-                            <span class="">Login</span>
-
-                        </div>
-                        <div class="mdl-card__supporting-text">
-                            <div class="mdl-textfield mdl-js-textfield">
-                                <i class="material-icons">person</i>
-                                <input class="mdl-textfield__input" type="text" id="sample1" name="hola">
-                                <label class="mdl-textfield__label" for="sample1">Username</label>
-                            </div>
-                            <div class="mdl-textfield mdl-js-textfield">
-                                <i class="material-icons">lock_outline</i>
-                                <input class="mdl-textfield__input" type="password" id="sample2">
-                                <label class="mdl-textfield__label" for="sample2">Password</label>
-
-                            </div>
-                        </div>
-                        <div class="mdl-card__actions mdl-card--border">
-                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-                                    type="submit">
-                                Login
-                            </button>
-                            <div class="mdl-cell mdl-cell--12-col loginwith">
-                                <p>or login with</p>
-                            </div>
-                            <div class="mdl-cell mdl-cell--12-col logos">
-                                <button class="mdl-button mdl-js-button mdl-js-ripple-effect logo-button logo-button--circle">
-
-                                    <svg style="width: 24px;height: 24px" viewBox="0 0 24 24"
-                                         class="logo logo-circle logo-circle--facebook logo--clickable mdl-shadow--2dp">
-                                        <path fill="#FFF"
-                                              d="M17,2V2H17V6H15C14.31,6 14,6.81 14,7.5V10H14L17,10V14H14V22H10V14H7V10H10V6A4,4 0 0,1 14,2H17Z"/>
-                                    </svg>
-                                </button>
-
-                                <button class="mdl-button mdl-js-button mdl-js-ripple-effect logo-button logo-button--circle">
-
-                                    <svg style="width: 24px;height: 24px" viewBox="0 0 24 24"
-                                         class="logo logo-circle logo-circle--google logo--clickable mdl-shadow--2dp">
-                                        <path fill="#FFF"
-                                              d="M21.35,11.1H12.18V13.83H18.69C18.36,17.64 15.19,19.27 12.19,19.27C8.36,19.27 5,16.25 5,12C5,7.9 8.2,4.73 12.2,4.73C15.29,4.73 17.1,6.7 17.1,6.7L19,4.72C19,4.72 16.56,2 12.1,2C6.42,2 2.03,6.8 2.03,12C2.03,17.05 6.16,22 12.25,22C17.6,22 21.5,18.33 21.5,12.91C21.5,11.76 21.35,11.1 21.35,11.1V11.1Z"/>
-                                    </svg>
-                                </button>
-                            </div>
-
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <footer class="demo-footer mdl-mini-footer">
-                <div class="mdl-mini-footer--left-section">
-                    <ul class="mdl-mini-footer--link-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Privacy and Terms</a></li>
-                        <li><a href="#">User Agreement</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </main>
-    </div>
-
+    <ng-view></ng-view>
 </div>
 
 <!-- bower:js -->
 <script src="js/vendor.js" type="application/javascript"></script>
 <!-- endbower -->
-
 <!-- build:js js/main.js -->
-<script src="js/hi.js"></script>
-<script src="js/hello.js"></script>
+<script src="js/app.js" type="application/javascript"></script>
+<script src="js/controllers/LoginCtrl.js" type="application/javascript"></script>
+
 <!-- endbuild -->
 
 </body>
