--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,15 @@
 <!-- bower:js -->
 <script src="js/vendor.js" type="application/javascript"></script>
 <!-- endbower -->
+
+<!-- libraries -->
+<script src="https://apis.google.com/js/client.js" type="application/javascript"></script>
+<!-- endlibraries -->
+
 <!-- build:js js/main.js -->
-<script src="js/app.js" type="application/javascript"></script>
+<script src="js/services/GoogleServiceLogin.js" type="application/javascript"></script>
 <script src="js/controllers/LoginCtrl.js" type="application/javascript"></script>
+<script src="js/app.js" type="application/javascript"></script>
 
 <!-- endbuild -->
 
