importer done, working with summary view

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Title</title>
+    <title>Founder's Map Quest</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -15,10 +15,11 @@
 
 </head>
 <body>
-<div class="ngView">
-    <ng-view></ng-view>
+<!--<div class="ngView">-->
+    <!--<ng-view></ng-view>-->
+    <div ui-view></div>
 
-</div>
+<!--</div>-->
 
 
 <!-- bower:js -->
